@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-06-14T01:51:58Z",
+  "timestamp" : "2022-06-14T08:22:49Z",
   "count_outdated" : 273,
   "uniques_outdated" : 162,
-  "count" : 278,
-  "uniques" : 166,
+  "count" : 277,
+  "uniques" : 165,
   "clones" : [
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
