@@ -1,11 +1,11 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 4,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-07T00:00:00Z",
